fix TREND alignment

--- a/css/trend/components.css
+++ b/css/trend/components.css
@@ -55,11 +55,12 @@
 
 .status-row .label {
     display: inline-block;
-    width: 65px;
+    width: 85px;
     text-align: right;
     padding-right: 12px;
     color: var(--text-dim);
     font-weight: 600;
+    white-space: nowrap;
 }
 
 .status-up {
